--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plpak-react-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://matt-gallery.github.io/plpak-react-2",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
